--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="stream-container">
         <audio controls>
-            <source src="http://yourstreamurl:port/stream" type="audio/mpeg">
+            <source src="http://djpanos.mooo.com:8000/live" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </div>
